newscanner/parse.output
Nonterminals useless in grammar

   single_input


Rules useless in grammar

  320 single_input: NEWLINE
  321             | stmt


Grammar

    0 $accept: start $end

    1 start: file_input
    2      | encoding_decl

    3 file_input: star_NEWLINE_stmt ENDMARKER

    4 pick_NEWLINE_stmt: NEWLINE
    5                  | stmt

    6 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
    7                  | %empty

    8 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    9          | AT dotted_name NEWLINE

   10 opt_arglist: arglist
   11            | %empty

   12 decorators: decorator decorators
   13           | decorator

   14 decorated: decorators classdef
   15          | decorators funcdef

   16 funcdef: DEF NAME parameters COLON suite

   17 parameters: LPAR varargslist RPAR
   18           | LPAR RPAR

   19 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   20            | fpdef opt_EQUAL_test star_COMMA_fpdef

   21 opt_EQUAL_test: EQUAL test
   22               | %empty

   23 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   24                 | %empty

   25 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   26                    | %empty

   27 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   28                     | DOUBLESTAR NAME

   29 fpdef: NAME
   30      | LPAR fplist RPAR

   31 fplist: fpdef star_fpdef_notest

   32 stmt: simple_stmt
   33     | compound_stmt

   34 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   35 small_stmt: expr_stmt
   36           | print_stmt
   37           | del_stmt
   38           | pass_stmt
   39           | flow_stmt
   40           | import_stmt
   41           | global_stmt
   42           | exec_stmt
   43           | assert_stmt

   44 expr_stmt: testlist augassign pick_yield_expr_testlist
   45          | testlist star_EQUAL

   46 pick_yield_expr_testlist: yield_expr
   47                         | testlist

   48 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   49           | %empty

   50 augassign: PLUSEQUAL
   51          | MINEQUAL
   52          | STAREQUAL
   53          | SLASHEQUAL
   54          | PERCENTEQUAL
   55          | AMPEREQUAL
   56          | VBAREQUAL
   57          | CIRCUMFLEXEQUAL
   58          | LEFTSHIFTEQUAL
   59          | RIGHTSHIFTEQUAL
   60          | DOUBLESTAREQUAL
   61          | DOUBLESLASHEQUAL

   62 print_stmt: PRINT opt_test
   63           | PRINT RIGHTSHIFT test opt_test_2

   64 opt_test: test star_COMMA_test
   65         | %empty

   66 opt_test_2: plus_COMMA_test
   67           | %empty

   68 del_stmt: DEL exprlist

   69 pass_stmt: PASS

   70 flow_stmt: break_stmt
   71          | continue_stmt
   72          | return_stmt
   73          | raise_stmt
   74          | yield_stmt

   75 break_stmt: BREAK

   76 continue_stmt: CONTINUE

   77 return_stmt: RETURN testlist
   78            | RETURN

   79 yield_stmt: yield_expr

   80 raise_stmt: RAISE test opt_test_3
   81           | RAISE

   82 opt_COMMA_test: COMMA test
   83               | %empty

   84 opt_test_3: COMMA test opt_COMMA_test
   85           | %empty

   86 import_stmt: import_name
   87            | import_from

   88 import_name: IMPORT dotted_as_names

   89 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   90            | FROM plus_DOT IMPORT pick_STAR_import

   91 star_DOT: DOT star_DOT
   92         | %empty

   93 plus_DOT: DOT plus_DOT
   94         | DOT

   95 pick_STAR_import: STAR
   96                 | LPAR import_as_names RPAR
   97                 | import_as_names

   98 import_as_name: NAME AS NAME
   99               | NAME

  100 dotted_as_name: dotted_name AS NAME
  101               | dotted_name

  102 import_as_names: import_as_name star_COMMA_import_as_name

  103 dotted_as_names: dotted_as_name
  104                | dotted_as_names COMMA dotted_as_name

  105 dotted_name: NAME
  106            | dotted_name DOT NAME

  107 global_stmt: global_stmt COMMA NAME
  108            | GLOBAL NAME

  109 exec_stmt: EXEC expr IN test opt_COMMA_test
  110          | EXEC expr

  111 assert_stmt: ASSERT test COMMA test
  112            | ASSERT test

  113 compound_stmt: if_stmt
  114              | while_stmt
  115              | for_stmt
  116              | try_stmt
  117              | with_stmt
  118              | funcdef
  119              | classdef
  120              | decorated

  121 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  122        | IF test COLON suite star_ELIF

  123 star_ELIF: ELIF test COLON suite star_ELIF
  124          | %empty

  125 while_stmt: WHILE test COLON suite ELSE COLON suite
  126           | WHILE test COLON suite

  127 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  128         | FOR exprlist IN testlist COLON suite

  129 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  130         | TRY COLON suite FINALLY COLON suite

  131 plus_except: except_clause COLON suite plus_except
  132            | except_clause COLON suite

  133 opt_ELSE: ELSE COLON suite
  134         | %empty

  135 opt_FINALLY: FINALLY COLON suite
  136            | %empty

  137 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  138 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  139                     | %empty

  140 with_item: test AS expr
  141          | test

  142 except_clause: EXCEPT test opt_AS_COMMA
  143              | EXCEPT

  144 pick_AS_COMMA: AS
  145              | COMMA

  146 opt_AS_COMMA: pick_AS_COMMA test
  147             | %empty

  148 suite: simple_stmt
  149      | NEWLINE INDENT plus_stmt DEDENT

  150 plus_stmt: stmt plus_stmt
  151          | stmt

  152 testlist_safe: old_test plus_COMMA_old_test
  153              | old_test

  154 old_test: or_test
  155         | old_lambdef

  156 old_lambdef: LAMBDA varargslist COLON old_test
  157            | LAMBDA COLON old_test

  158 test: or_test opt_IF_ELSE
  159     | lambdef

  160 opt_IF_ELSE: IF or_test ELSE test
  161            | %empty

  162 or_test: and_test
  163        | or_test OR and_test

  164 and_test: not_test
  165         | and_test AND not_test

  166 not_test: NOT not_test
  167         | comparison

  168 comparison: expr
  169           | comparison comp_op expr

  170 comp_op: LESS
  171        | GREATER
  172        | EQEQUAL
  173        | GREATEREQUAL
  174        | LESSEQUAL
  175        | GRLT
  176        | NOTEQUAL
  177        | IN
  178        | NOT IN
  179        | IS
  180        | IS NOT

  181 expr: xor_expr
  182     | expr BAR xor_expr

  183 xor_expr: and_expr
  184         | xor_expr CIRCUMFLEX and_expr

  185 and_expr: shift_expr
  186         | and_expr AMPERSAND shift_expr

  187 shift_expr: arith_expr
  188           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  189 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  190                          | RIGHTSHIFT

  191 arith_expr: term
  192           | arith_expr pick_PLUS_MINUS term

  193 pick_PLUS_MINUS: PLUS
  194                | MINUS

  195 term: factor
  196     | term pick_multop factor

  197 pick_multop: STAR
  198            | SLASH
  199            | PERCENT
  200            | DOUBLESLASH

  201 factor: pick_unop factor
  202       | power

  203 pick_unop: PLUS
  204          | MINUS
  205          | TILDE

  206 power: atom star_trailer DOUBLESTAR factor
  207      | atom star_trailer

  208 star_trailer: trailer star_trailer
  209             | %empty

  210 atom: LPAR opt_yield_test RPAR
  211     | LSQB opt_listmaker RSQB
  212     | LBRACE opt_dictorsetmaker RBRACE
  213     | BACKQUOTE testlist1 BACKQUOTE
  214     | NAME
  215     | NUMBER
  216     | plus_STRING

  217 pick_yield_expr_testlist_comp: yield_expr
  218                              | testlist_comp

  219 opt_yield_test: pick_yield_expr_testlist_comp
  220               | %empty

  221 opt_listmaker: listmaker
  222              | %empty

  223 opt_dictorsetmaker: dictorsetmaker
  224                   | %empty

  225 plus_STRING: STRING plus_STRING
  226            | STRING

  227 listmaker: test list_for
  228          | test star_COMMA_test

  229 testlist_comp: test comp_for
  230              | test star_COMMA_test

  231 lambdef: LAMBDA varargslist COLON test
  232        | LAMBDA COLON test

  233 trailer: LPAR opt_arglist RPAR
  234        | LSQB subscriptlist RSQB
  235        | DOT NAME

  236 subscriptlist: subscript star_COMMA_subscript

  237 subscript: DOT DOT DOT
  238          | test
  239          | opt_test_only COLON opt_test_only opt_sliceop

  240 opt_test_only: test
  241              | %empty

  242 opt_sliceop: sliceop
  243            | %empty

  244 sliceop: COLON test
  245        | COLON

  246 exprlist: expr star_COMMA_expr

  247 testlist: test star_COMMA_test

  248 dictorsetmaker: test COLON test pick_comp_for
  249               | test pick_for_test

  250 pick_comp_for: comp_for
  251              | star_test_COLON_test

  252 pick_for_test: comp_for
  253              | star_COMMA_test

  254 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  255         | CLASS NAME COLON suite

  256 opt_testlist: testlist
  257             | %empty

  258 arglist: argument COMMA arglist
  259        | argument COMMA
  260        | argument
  261        | listarg COMMA arglist_postlist
  262        | listarg
  263        | dictarg

  264 argument: test opt_comp_for
  265         | test EQUAL test

  266 opt_comp_for: comp_for
  267             | %empty

  268 list_iter: list_for
  269          | list_if

  270 list_for: FOR exprlist IN testlist_safe list_iter
  271         | FOR exprlist IN testlist_safe

  272 list_if: IF old_test list_iter
  273        | IF old_test

  274 comp_iter: comp_for
  275          | comp_if

  276 comp_for: FOR exprlist IN or_test comp_iter
  277         | FOR exprlist IN or_test

  278 comp_if: IF old_test comp_iter
  279        | IF old_test

  280 testlist1: test
  281          | testlist1 COMMA test

  282 encoding_decl: NAME

  283 yield_expr: YIELD testlist
  284           | YIELD

  285 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  286                  | COMMA
  287                  | %empty

  288 star_COMMA_expr: COMMA expr star_COMMA_expr
  289                | COMMA
  290                | %empty

  291 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  292                 | COMMA
  293                 | %empty

  294 star_COMMA_test: COMMA test star_COMMA_test
  295                | COMMA
  296                | %empty

  297 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  298                     | COMMA
  299                     | %empty

  300 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  301                     | COMMA
  302                     | %empty

  303 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  304                          | COMMA
  305                          | %empty

  306 plus_COMMA_test: COMMA test plus_COMMA_test
  307                | COMMA test COMMA
  308                | COMMA test

  309 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  310                    | COMMA old_test COMMA
  311                    | COMMA old_test

  312 dictarg: DOUBLESTAR test

  313 listarg: STAR test

  314 arglist_postlist: argument COMMA arglist_postlist
  315                 | dictarg
  316                 | argument

  317 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  318                        | SEMI
  319                        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 55
AMPERSAND (259) 186
AND (260) 165
AS (261) 98 100 140 144
ASSERT (262) 111 112
AT (263) 8 9
BACKQUOTE (264) 213
BAR (265) 182
BREAK (266) 75
CIRCUMFLEX (267) 184
CIRCUMFLEXEQUAL (268) 57
CLASS (269) 254 255
COLON (270) 16 121 122 123 125 126 127 128 129 130 131 132 133 135
    137 156 157 231 232 239 244 245 248 254 255 297
COMMA (271) 23 25 82 84 104 107 111 138 145 258 259 261 281 285 286
    288 289 291 292 294 295 297 298 300 301 303 304 306 307 308 309
    310 311 314
CONTINUE (272) 76
DEDENT (273) 149
DEF (274) 16
DEL (275) 68
DOT (276) 91 93 94 106 235 237
DOUBLESLASH (277) 200
DOUBLESLASHEQUAL (278) 61
DOUBLESTAR (279) 25 28 206 312
DOUBLESTAREQUAL (280) 60
ELIF (281) 123
ELSE (282) 121 125 127 133 160
ENDMARKER (283) 3
EQEQUAL (284) 172
EQUAL (285) 21 48 265
EXCEPT (286) 142 143
EXEC (287) 109 110
FINALLY (288) 130 135
FOR (289) 127 128 270 271 276 277
FROM (290) 89 90
GLOBAL (291) 108
GREATER (292) 171
GREATEREQUAL (293) 173
GRLT (294) 175
IF (295) 121 122 160 272 273 278 279
IMPORT (296) 88 89 90
IN (297) 109 127 128 177 178 270 271 276 277
INDENT (298) 149
IS (299) 179 180
LAMBDA (300) 156 157 231 232
LBRACE (301) 212
LEFTSHIFT (302) 189
LEFTSHIFTEQUAL (303) 58
LESS (304) 170
LESSEQUAL (305) 174
LPAR (306) 8 17 18 30 96 210 233 254
LSQB (307) 211 234
MINEQUAL (308) 51
MINUS (309) 194 204
NAME (310) 16 25 27 28 29 98 99 100 105 106 107 108 214 235 254 255
    282
NEWLINE (311) 4 8 9 34 149
NOT (312) 166 178 180
NOTEQUAL (313) 176
NUMBER (314) 215
OR (315) 163
PASS (316) 69
PERCENT (317) 199
PERCENTEQUAL (318) 54
PLUS (319) 193 203
PLUSEQUAL (320) 50
PRINT (321) 62 63
RAISE (322) 80 81
RBRACE (323) 212
RETURN (324) 77 78
RIGHTSHIFT (325) 63 190
RIGHTSHIFTEQUAL (326) 59
RPAR (327) 8 17 18 30 96 210 233 254
RSQB (328) 211 234
SEMI (329) 317 318
SLASH (330) 198
SLASHEQUAL (331) 53
STAR (332) 27 95 197 313
STAREQUAL (333) 52
STRING (334) 225 226
TILDE (335) 205
TRY (336) 129 130
VBAREQUAL (337) 56
WHILE (338) 125 126
WITH (339) 137
YIELD (340) 283 284


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
start (87)
    on left: 1 2, on right: 0
file_input (88)
    on left: 3, on right: 1
pick_NEWLINE_stmt (89)
    on left: 4 5, on right: 6
star_NEWLINE_stmt (90)
    on left: 6 7, on right: 3 6
decorator (91)
    on left: 8 9, on right: 12 13
opt_arglist (92)
    on left: 10 11, on right: 8 233
decorators (93)
    on left: 12 13, on right: 12 14 15
decorated (94)
    on left: 14 15, on right: 120
funcdef (95)
    on left: 16, on right: 15 118
parameters (96)
    on left: 17 18, on right: 16
varargslist (97)
    on left: 19 20, on right: 17 156 231
opt_EQUAL_test (98)
    on left: 21 22, on right: 20 23 291
star_fpdef_COMMA (99)
    on left: 23 24, on right: 19 23
opt_DOUBLESTAR_NAME (100)
    on left: 25 26, on right: 27
pick_STAR_DOUBLESTAR (101)
    on left: 27 28, on right: 19
fpdef (102)
    on left: 29 30, on right: 20 23 31 285 291
fplist (103)
    on left: 31, on right: 30
stmt (104)
    on left: 32 33, on right: 5 150 151
simple_stmt (105)
    on left: 34, on right: 32 148
small_stmt (106)
    on left: 35 36 37 38 39 40 41 42 43, on right: 34 317
expr_stmt (107)
    on left: 44 45, on right: 35
pick_yield_expr_testlist (108)
    on left: 46 47, on right: 44 48
star_EQUAL (109)
    on left: 48 49, on right: 45 48
augassign (110)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61, on right: 44
print_stmt (111)
    on left: 62 63, on right: 36
opt_test (112)
    on left: 64 65, on right: 62
opt_test_2 (113)
    on left: 66 67, on right: 63
del_stmt (114)
    on left: 68, on right: 37
pass_stmt (115)
    on left: 69, on right: 38
flow_stmt (116)
    on left: 70 71 72 73 74, on right: 39
break_stmt (117)
    on left: 75, on right: 70
continue_stmt (118)
    on left: 76, on right: 71
return_stmt (119)
    on left: 77 78, on right: 72
yield_stmt (120)
    on left: 79, on right: 74
raise_stmt (121)
    on left: 80 81, on right: 73
opt_COMMA_test (122)
    on left: 82 83, on right: 84 109
opt_test_3 (123)
    on left: 84 85, on right: 80
import_stmt (124)
    on left: 86 87, on right: 40
import_name (125)
    on left: 88, on right: 86
import_from (126)
    on left: 89 90, on right: 87
star_DOT (127)
    on left: 91 92, on right: 89 91
plus_DOT (128)
    on left: 93 94, on right: 90 93
pick_STAR_import (129)
    on left: 95 96 97, on right: 89 90
import_as_name (130)
    on left: 98 99, on right: 102 303
dotted_as_name (131)
    on left: 100 101, on right: 103 104
import_as_names (132)
    on left: 102, on right: 96 97
dotted_as_names (133)
    on left: 103 104, on right: 88 104
dotted_name (134)
    on left: 105 106, on right: 8 9 89 100 101 106
global_stmt (135)
    on left: 107 108, on right: 41 107
exec_stmt (136)
    on left: 109 110, on right: 42
assert_stmt (137)
    on left: 111 112, on right: 43
compound_stmt (138)
    on left: 113 114 115 116 117 118 119 120, on right: 33
if_stmt (139)
    on left: 121 122, on right: 113
star_ELIF (140)
    on left: 123 124, on right: 121 122 123
while_stmt (141)
    on left: 125 126, on right: 114
for_stmt (142)
    on left: 127 128, on right: 115
try_stmt (143)
    on left: 129 130, on right: 116
plus_except (144)
    on left: 131 132, on right: 129 131
opt_ELSE (145)
    on left: 133 134, on right: 129
opt_FINALLY (146)
    on left: 135 136, on right: 129
with_stmt (147)
    on left: 137, on right: 117
star_COMMA_with_item (148)
    on left: 138 139, on right: 137 138
with_item (149)
    on left: 140 141, on right: 137 138
except_clause (150)
    on left: 142 143, on right: 131 132
pick_AS_COMMA (151)
    on left: 144 145, on right: 146
opt_AS_COMMA (152)
    on left: 146 147, on right: 142
suite (153)
    on left: 148 149, on right: 16 121 122 123 125 126 127 128 129
    130 131 132 133 135 137 254 255
plus_stmt (154)
    on left: 150 151, on right: 149 150
testlist_safe (155)
    on left: 152 153, on right: 270 271
old_test (156)
    on left: 154 155, on right: 152 153 156 157 272 273 278 279 309
    310 311
old_lambdef (157)
    on left: 156 157, on right: 155
test (158)
    on left: 158 159, on right: 21 63 64 80 82 84 109 111 112 121 122
    123 125 126 140 141 142 146 160 227 228 229 230 231 232 238 240
    244 247 248 249 264 265 280 281 294 297 306 307 308 312 313
opt_IF_ELSE (159)
    on left: 160 161, on right: 158
or_test (160)
    on left: 162 163, on right: 154 158 160 163 276 277
and_test (161)
    on left: 164 165, on right: 162 163 165
not_test (162)
    on left: 166 167, on right: 164 165 166
comparison (163)
    on left: 168 169, on right: 167 169
comp_op (164)
    on left: 170 171 172 173 174 175 176 177 178 179 180, on right:
    169
expr (165)
    on left: 181 182, on right: 109 110 140 168 169 182 246 288
xor_expr (166)
    on left: 183 184, on right: 181 182 184
and_expr (167)
    on left: 185 186, on right: 183 184 186
shift_expr (168)
    on left: 187 188, on right: 185 186 188
pick_LEFTSHIFT_RIGHTSHIFT (169)
    on left: 189 190, on right: 188
arith_expr (170)
    on left: 191 192, on right: 187 188 192
pick_PLUS_MINUS (171)
    on left: 193 194, on right: 192
term (172)
    on left: 195 196, on right: 191 192 196
pick_multop (173)
    on left: 197 198 199 200, on right: 196
factor (174)
    on left: 201 202, on right: 195 196 201 206
pick_unop (175)
    on left: 203 204 205, on right: 201
power (176)
    on left: 206 207, on right: 202
star_trailer (177)
    on left: 208 209, on right: 206 207 208
atom (178)
    on left: 210 211 212 213 214 215 216, on right: 206 207
pick_yield_expr_testlist_comp (179)
    on left: 217 218, on right: 219
opt_yield_test (180)
    on left: 219 220, on right: 210
opt_listmaker (181)
    on left: 221 222, on right: 211
opt_dictorsetmaker (182)
    on left: 223 224, on right: 212
plus_STRING (183)
    on left: 225 226, on right: 216 225
listmaker (184)
    on left: 227 228, on right: 221
testlist_comp (185)
    on left: 229 230, on right: 218
lambdef (186)
    on left: 231 232, on right: 159
trailer (187)
    on left: 233 234 235, on right: 208
subscriptlist (188)
    on left: 236, on right: 234
subscript (189)
    on left: 237 238 239, on right: 236 300
opt_test_only (190)
    on left: 240 241, on right: 239
opt_sliceop (191)
    on left: 242 243, on right: 239
sliceop (192)
    on left: 244 245, on right: 242
exprlist (193)
    on left: 246, on right: 68 127 128 270 271 276 277
testlist (194)
    on left: 247, on right: 44 45 47 77 127 128 256 283
dictorsetmaker (195)
    on left: 248 249, on right: 223
pick_comp_for (196)
    on left: 250 251, on right: 248
pick_for_test (197)
    on left: 252 253, on right: 249
classdef (198)
    on left: 254 255, on right: 14 119
opt_testlist (199)
    on left: 256 257, on right: 254
arglist (200)
    on left: 258 259 260 261 262 263, on right: 10 258
argument (201)
    on left: 264 265, on right: 258 259 260 314 316
opt_comp_for (202)
    on left: 266 267, on right: 264
list_iter (203)
    on left: 268 269, on right: 270 272
list_for (204)
    on left: 270 271, on right: 227 268
list_if (205)
    on left: 272 273, on right: 269
comp_iter (206)
    on left: 274 275, on right: 276 278
comp_for (207)
    on left: 276 277, on right: 229 250 252 266 274
comp_if (208)
    on left: 278 279, on right: 275
testlist1 (209)
    on left: 280 281, on right: 213 281
encoding_decl (210)
    on left: 282, on right: 2
yield_expr (211)
    on left: 283 284, on right: 46 79 217
star_fpdef_notest (212)
    on left: 285 286 287, on right: 31 285
star_COMMA_expr (213)
    on left: 288 289 290, on right: 246 288
star_COMMA_fpdef (214)
    on left: 291 292 293, on right: 20 291
star_COMMA_test (215)
    on left: 294 295 296, on right: 64 228 230 247 253 294
star_test_COLON_test (216)
    on left: 297 298 299, on right: 251 297
star_COMMA_subscript (217)
    on left: 300 301 302, on right: 236 300
star_COMMA_import_as_name (218)
    on left: 303 304 305, on right: 102 303
plus_COMMA_test (219)
    on left: 306 307 308, on right: 66 306
plus_COMMA_old_test (220)
    on left: 309 310 311, on right: 152 309
dictarg (221)
    on left: 312, on right: 263 315
listarg (222)
    on left: 313, on right: 261 262
arglist_postlist (223)
    on left: 314 315 316, on right: 261 314
small_stmt_STAR_OR_SEMI (224)
    on left: 317 318 319, on right: 34 317


State 0

    0 $accept: . start $end

    ASSERT     shift, and go to state 1
    AT         shift, and go to state 2
    BACKQUOTE  shift, and go to state 3
    BREAK      shift, and go to state 4
    CLASS      shift, and go to state 5
    CONTINUE   shift, and go to state 6
    DEF        shift, and go to state 7
    DEL        shift, and go to state 8
    EXEC       shift, and go to state 9
    FOR        shift, and go to state 10
    FROM       shift, and go to state 11
    GLOBAL     shift, and go to state 12
    IF         shift, and go to state 13
    IMPORT     shift, and go to state 14
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 20
    NEWLINE    shift, and go to state 21
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PASS       shift, and go to state 24
    PLUS       shift, and go to state 25
    PRINT      shift, and go to state 26
    RAISE      shift, and go to state 27
    RETURN     shift, and go to state 28
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30
    TRY        shift, and go to state 31
    WHILE      shift, and go to state 32
    WITH       shift, and go to state 33
    YIELD      shift, and go to state 34

    $default  reduce using rule 7 (star_NEWLINE_stmt)

    start              go to state 35
    file_input         go to state 36
    pick_NEWLINE_stmt  go to state 37
    star_NEWLINE_stmt  go to state 38
    decorator          go to state 39
    decorators         go to state 40
    decorated          go to state 41
    funcdef            go to state 42
    stmt               go to state 43
    simple_stmt        go to state 44
    small_stmt         go to state 45
    expr_stmt          go to state 46
    print_stmt         go to state 47
    del_stmt           go to state 48
    pass_stmt          go to state 49
    flow_stmt          go to state 50
    break_stmt         go to state 51
    continue_stmt      go to state 52
    return_stmt        go to state 53
    yield_stmt         go to state 54
    raise_stmt         go to state 55
    import_stmt        go to state 56
    import_name        go to state 57
    import_from        go to state 58
    global_stmt        go to state 59
    exec_stmt          go to state 60
    assert_stmt        go to state 61
    compound_stmt      go to state 62
    if_stmt            go to state 63
    while_stmt         go to state 64
    for_stmt           go to state 65
    try_stmt           go to state 66
    with_stmt          go to state 67
    test               go to state 68
    or_test            go to state 69
    and_test           go to state 70
    not_test           go to state 71
    comparison         go to state 72
    expr               go to state 73
    xor_expr           go to state 74
    and_expr           go to state 75
    shift_expr         go to state 76
    arith_expr         go to state 77
    term               go to state 78
    factor             go to state 79
    pick_unop          go to state 80
    power              go to state 81
    atom               go to state 82
    plus_STRING        go to state 83
    lambdef            go to state 84
    testlist           go to state 85
    classdef           go to state 86
    encoding_decl      go to state 87
    yield_expr         go to state 88


State 1

  111 assert_stmt: ASSERT . test COMMA test
  112            | ASSERT . test

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 89
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 90
    or_test      go to state 69
    and_test     go to state 70
    not_test     go to state 71
    comparison   go to state 72
    expr         go to state 73
    xor_expr     go to state 74
    and_expr     go to state 75
    shift_expr   go to state 76
    arith_expr   go to state 77
    term         go to state 78
    factor       go to state 79
    pick_unop    go to state 80
    power        go to state 81
    atom         go to state 82
    plus_STRING  go to state 83
    lambdef      go to state 84


State 2

    8 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    9          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 91

    dotted_name  go to state 92


State 3

  213 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 89
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 93
    or_test      go to state 69
    and_test     go to state 70
    not_test     go to state 71
    comparison   go to state 72
    expr         go to state 73
    xor_expr     go to state 74
    and_expr     go to state 75
    shift_expr   go to state 76
    arith_expr   go to state 77
    term         go to state 78
    factor       go to state 79
    pick_unop    go to state 80
    power        go to state 81
    atom         go to state 82
    plus_STRING  go to state 83
    lambdef      go to state 84
    testlist1    go to state 94


State 4

   75 break_stmt: BREAK .

    $default  reduce using rule 75 (break_stmt)


State 5

  254 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  255         | CLASS . NAME COLON suite

    NAME  shift, and go to state 95


State 6

   76 continue_stmt: CONTINUE .

    $default  reduce using rule 76 (continue_stmt)


State 7

   16 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 96


State 8

   68 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 89
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 97
    xor_expr     go to state 74
    and_expr     go to state 75
    shift_expr   go to state 76
    arith_expr   go to state 77
    term         go to state 78
    factor       go to state 79
    pick_unop    go to state 80
    power        go to state 81
    atom         go to state 82
    plus_STRING  go to state 83
    exprlist     go to state 98


State 9

  109 exec_stmt: EXEC . expr IN test opt_COMMA_test
  110          | EXEC . expr

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 89
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 99
    xor_expr     go to state 74
    and_expr     go to state 75
    shift_expr   go to state 76
    arith_expr   go to state 77
    term         go to state 78
    factor       go to state 79
    pick_unop    go to state 80
    power        go to state 81
    atom         go to state 82
    plus_STRING  go to state 83


State 10

  127 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  128         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 89
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 97
    xor_expr     go to state 74
    and_expr     go to state 75
    shift_expr   go to state 76
    arith_expr   go to state 77
    term         go to state 78
    factor       go to state 79
    pick_unop    go to state 80
    power        go to state 81
    atom         go to state 82
    plus_STRING  go to state 83
    exprlist     go to state 100


State 11

   89 import_from: FROM . star_DOT dotted_name IMPORT pick_STAR_import
   90            | FROM . plus_DOT IMPORT pick_STAR_import

    DOT  shift, and go to state 101

    $default  reduce using rule 92 (star_DOT)

    star_DOT  go to state 102
    plus_DOT  go to state 103


State 12

  108 global_stmt: GLOBAL . NAME

    NAME  shift, and go to state 104


State 13

  121 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  122        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 89
    NOT        shift, and go to state 22
    NUMBER     shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 105
    or_test      go to state 69
    and_test     go to state 70
    not_test     go to state 71
    comparison   go to state 72
    expr         go to state 73
    xor_expr     go to state 74
    and_expr     go to state 75
    shift_expr   go to state 76
    arith_expr   go to state 77
    term         go to state 78
    factor       go to state 79
    pick_unop    go to state 80
    power        go to state 81
    atom         go to state 82
    plus_STRING  go to state 83
    lambdef      go to state 84


State 14

   88 import_name: IMPORT . dotted_as_names

    NAME  shift, and go to state 91

    dotted_as_name   go to state 106
    dotted_as_names  go to state 107
    dotted_name      go to state 108


State 15

  231 lambdef: LAMBDA . varargslist COLON test
  232        | LAMBDA . COLON test
